--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <main>
-    
+
         <h1 class="title-line">ZACH BUCEK STUDIO</h1>
         <h2>// design & development</h2>
         <h3>contact: zbucek@gmail.com</h3>
@@ -19,24 +19,11 @@
 
         <hr>
 
-        <dl class="disclosures">
-          <dt>
-            <button aria-expanded="false" aria-controls="about-description" aria-label="about me"><span class="arrow">></span> About Me</button>
-          </dt>
-          <dd>
-            <div id="about-description" class="description">
-              <p>
-                - I am a web designer and developer. My skills run the gamut from layout and logo design through UI/UX and front-end development. I also do WordPress development, creating custom themes for clients who want something more than what comes out of the box. <br>
-                - With all of my projects, I seek to harness the complexity of information systems to create a lasting connection with the end user. This also means working closely with clients to develop a durable identity and design system. <br>
-                - Below is a picture of my cat Friar Tuck. He is always hungry.
-              </p>
-              <img src="images/FT_web.png" alt="">
-            </div>
-            <!--END DESCRIPTION-->
-          </dd>
-        </dl>
-        <!--END DISCLOSURES-->
-
+        <h3>About Me:</h3>
+          <p class="description">
+            - I am a web designer and developer. My skills run the gamut from layout and logo design through UI/UX and front-end development. I also do WordPress development, creating custom themes for clients who want something more than what comes out of the box. <br>
+            - With all of my projects, I seek to harness the complexity of information systems to create a lasting connection with the end user. This also means working closely with clients to develop a durable identity and design system. <br>
+          </p>
 
         <h2 class="websites-line">WEBSITES</h2>
 
@@ -124,7 +111,6 @@
 </main>
 
 </body>
-
-<script src="js/disclosure.js"></script>
+<script src="js/disclosure.js" async></script>
 
 </html>
