--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
 
 <main>
 
-        <h1 class="title-line">ZACH BUCEK STUDIO</h1>
-        <h2>// design & development</h2>
-        <h3>contact: zbucek@gmail.com</h3>
-        <h3><a href="https://zachbucek.myportfolio.com/" target="_blank">portfolio</a></h3>
+        <div class="contact">
+          <h1 class="title-line">ZACH BUCEK STUDIO</h1>
+          <h2>// design & development</h2>
+          <h3>contact: zbucek@gmail.com</h3>
+          <h3><a href="https://zachbucek.myportfolio.com/" target="_blank">portfolio</a></h3>
 
-        <hr>
+          <hr>
 
-        <h3>About Me:</h3>
-          <p class="description">
-            - I am a web designer and developer. My skills run the gamut from layout and logo design through UI/UX and front-end development. I also do WordPress development, creating custom themes for clients who want something more than what comes out of the box. <br>
-            - With all of my projects, I seek to harness the complexity of information systems to create a lasting connection with the end user. This also means working closely with clients to develop a durable identity and design system. <br>
-          </p>
+          <div class="description">
+            <p>
+              I am a web designer and developer. My skills run the gamut from layout and logo design through UI/UX and front-end development. I also do WordPress development, creating custom themes for clients who want something more than what comes out of the box.
+            </p>
+            <p>
+              With all of my projects, I seek to harness the complexity of information systems to create a lasting connection with the end user. This also means working closely with clients to develop a durable identity and design system.
+            </p>
+          </div>
+      </div>
+      <!--END CONTACT-->
 
         <h2 class="websites-line">WEBSITES</h2>
 
