--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <main>
 
-        <div class="contact">
-          <h1 class="title-line">ZACH BUCEK STUDIO</h1>
-          <h2>// design & development</h2>
+        <div class="header">
+          <div class="title">
+            <h1 class="title-line">ZACH BUCEK STUDIO</h1>
+            <h2>// design & development</h2>
+          </div>
+
           <h3>contact: zbucek@gmail.com</h3>
-          <h3><a href="https://zachbucek.myportfolio.com/" target="_blank">portfolio</a></h3>
 
           <hr>
 
@@ -27,6 +29,9 @@
             <p>
               With all of my projects, I seek to harness the complexity of information systems to create a lasting connection with the end user. This also means working closely with clients to develop a durable identity and design system.
             </p>
+
+            <a href="https://zachbucek.myportfolio.com/" target="_blank">Portfolio</a>
+
           </div>
       </div>
       <!--END CONTACT-->
